test/conformance/chainsaw/generate/clusterpolicy/standard/existing/existing-basic-create-policy-preconditions-data/fail-generated-resources.yaml
apiVersion: v1
data:
  doeshavesvclb: "true"
kind: ConfigMap
metadata:
  name: mylb-cm
  namespace: venus
