test/conformance/chainsaw/generate/clusterpolicy/standard/existing/existing-basic-create-policy-preconditions-data/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: existing-basic-create-policy-preconditions-data
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: existing-resources.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: existing-basic-create-policy-preconditions-data
  - name: step-03
    try:
    - sleep:
        duration: 3s
  - name: step-04
    try:
    - assert:
        file: generated-resources.yaml
    - error:
        file: fail-generated-resources.yaml
